Basic username changing (LOTS OF BUGS, Refactor required to clients from channels) + bugfix for wrapping links

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -168,9 +168,10 @@ message {
     bottom: 50px;
     left:0;
     margin-left: 180px;
-    padding: 7px 0 7px 10px;
+    padding: 10px;
     background: rgb(40, 40, 40);
     color: rgb(220, 220, 220);
+    word-break: break-word;
 }
 
 #writeArea {
